--- a/football referee/Base.lproj/Main.storyboard
+++ b/football referee/Base.lproj/Main.storyboard
@@ -169,6 +169,24 @@
             </objects>
             <point key="canvasLocation" x="1353" y="159"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="x31-Ov-jUG">
+            <objects>
+                <viewController id="ve6-6S-o7l" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="5hc-s8-p47"/>
+                        <viewControllerLayoutGuide type="bottom" id="mgI-XQ-Mwf"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="5XP-Zj-n7V">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="A7D-33-pbm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="490" y="900"/>
+        </scene>
         <!--Controller-->
         <scene sceneID="FAA-aQ-mv9">
             <objects>
@@ -230,24 +248,36 @@
                                 <state key="normal" title="YELLOW">
                                     <color key="titleColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <segue destination="ve6-6S-o7l" kind="modal" id="LqY-cU-aIa"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F7H-ZN-qD8">
                                 <rect key="frame" x="237" y="298" width="60" height="30"/>
                                 <state key="normal" title="YELLOW">
                                     <color key="titleColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <segue destination="ve6-6S-o7l" kind="modal" id="a2p-As-75b"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9g1-qS-oQK">
                                 <rect key="frame" x="42" y="353" width="30" height="30"/>
                                 <state key="normal" title="RED">
                                     <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <segue destination="6rX-Wm-sfh" kind="modal" id="D1U-WC-dM4"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3F9-vP-zSX">
                                 <rect key="frame" x="252" y="353" width="30" height="30"/>
                                 <state key="normal" title="RED">
                                     <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <segue destination="6rX-Wm-sfh" kind="modal" id="4C1-K2-vUW"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="afo-hi-GR4">
                                 <rect key="frame" x="109" y="467" width="102" height="37"/>
@@ -261,14 +291,39 @@
                                 <state key="normal" title="STAR">
                                     <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="star:" destination="Bxh-DG-XiN" eventType="touchUpInside" id="yDF-qD-gdM"/>
+                                </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.99852915432131972" green="1" blue="0.93573309741537702" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eKp-ag-rMr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="869" y="900"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="Vp0-IQ-6TU">
+            <objects>
+                <viewController id="6rX-Wm-sfh" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="JG4-oh-bW4"/>
+                        <viewControllerLayoutGuide type="bottom" id="kiF-M1-hRo"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="dqw-SJ-3rW">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="z9M-cA-Jw7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1328" y="900"/>
+        </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="a2p-As-75b"/>
+        <segue reference="D1U-WC-dM4"/>
+    </inferredMetricsTieBreakers>
 </document>
