--- a/football referee/Base.lproj/Main.storyboard
+++ b/football referee/Base.lproj/Main.storyboard
@@ -17,30 +17,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="新的比赛" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xzj-2b-mlX">
-                                <rect key="frame" x="123" y="20" width="74" height="37"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="范式规则足球" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mpA-jZ-xlb">
-                                <rect key="frame" x="20" y="53" width="144" height="47"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C1E-7t-XYc">
-                                <rect key="frame" x="42" y="94" width="110" height="54"/>
-                                <state key="normal" title="11v11人计时模式"/>
-                                <connections>
-                                    <segue destination="EkP-49-d1G" kind="modal" id="3O3-SN-g8n"/>
-                                </connections>
-                            </button>
                             <pageControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="a3Y-xM-Pq3">
                                 <rect key="frame" x="123" y="406" width="39" height="37"/>
                             </pageControl>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="changdii.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="VWO-Fk-89q">
+                                <rect key="frame" x="-88" y="0.0" width="497" height="568"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TCB-Hu-7Uz">
+                                <rect key="frame" x="109" y="451" width="106" height="65"/>
+                                <fontDescription key="fontDescription" name="YuppySC-Regular" family="Yuppy SC" pointSize="24"/>
+                                <state key="normal" title="新的比赛">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="EkP-49-d1G" kind="modal" id="xin-qY-Qfm"/>
+                                </connections>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.95575577020645142" green="0.84881764650344849" blue="0.70985966920852661" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -60,12 +54,25 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="avY-7G-ghu">
-                                <rect key="frame" x="240" y="20" width="60" height="30"/>
+                                <rect key="frame" x="110" y="405" width="60" height="30"/>
                                 <state key="normal" title="创建队伍"/>
                                 <connections>
                                     <segue destination="QIG-OC-sfq" kind="modal" id="8Cr-Mq-wln"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C1E-7t-XYc">
+                                <rect key="frame" x="49" y="168" width="110" height="54"/>
+                                <state key="normal" title="11v11人计时模式"/>
+                                <connections>
+                                    <segue destination="EkP-49-d1G" kind="modal" id="3O3-SN-g8n"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="范式规则足球" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mpA-jZ-xlb">
+                                <rect key="frame" x="20" y="58" width="139" height="71"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -86,9 +93,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aDK-ze-Zts">
-                                <rect key="frame" x="25" y="52" width="89" height="76"/>
-                            </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8cg-8G-9Cr">
                                 <rect key="frame" x="25" y="151" width="89" height="76"/>
                             </imageView>
@@ -113,9 +117,12 @@
                                 <rect key="frame" x="258" y="128" width="37" height="30"/>
                                 <state key="normal" title="SAVE"/>
                                 <connections>
-                                    <segue destination="Tn3-W0-SVe" kind="modal" id="eJ4-CL-ZFd"/>
+                                    <segue destination="Tn3-W0-SVe" kind="modal" id="7l9-A2-bHM"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6re-Gj-NSt">
+                                <rect key="frame" x="25" y="52" width="89" height="76"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -138,7 +145,7 @@
         <!--View Controller-->
         <scene sceneID="Ioy-Wq-HnI">
             <objects>
-                <viewController id="Tn3-W0-SVe" sceneMemberID="viewController">
+                <viewController id="Tn3-W0-SVe" customClass="TEAMViewController" customModule="football_referee" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="FPa-0h-UAp"/>
                         <viewControllerLayoutGuide type="bottom" id="OZa-eT-TeU"/>
@@ -172,7 +179,7 @@
         <!--View Controller-->
         <scene sceneID="x31-Ov-jUG">
             <objects>
-                <viewController id="ve6-6S-o7l" sceneMemberID="viewController">
+                <viewController id="ve6-6S-o7l" customClass="POINTViewController" customModule="football_referee" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="5hc-s8-p47"/>
                         <viewControllerLayoutGuide type="bottom" id="mgI-XQ-Mwf"/>
@@ -284,6 +291,9 @@
                                 <state key="normal" title="ADD TIME ">
                                     <color key="titleColor" red="0.52116986109178365" green="0.71896349245855751" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="ADDTIME:" destination="Bxh-DG-XiN" eventType="touchUpInside" id="yu0-nk-n8X"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3TY-0W-ALI">
                                 <rect key="frame" x="127" y="210" width="65" height="56"/>
@@ -304,7 +314,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="90:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YaW-T2-GuV">
-                                <rect key="frame" x="127" y="119" width="78" height="39"/>
+                                <rect key="frame" x="127" y="119" width="96" height="46"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -326,7 +336,7 @@
         <!--View Controller-->
         <scene sceneID="Vp0-IQ-6TU">
             <objects>
-                <viewController id="6rX-Wm-sfh" sceneMemberID="viewController">
+                <viewController id="6rX-Wm-sfh" customClass="REDViewController" customModule="football_referee" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="JG4-oh-bW4"/>
                         <viewControllerLayoutGuide type="bottom" id="kiF-M1-hRo"/>
@@ -342,8 +352,12 @@
             <point key="canvasLocation" x="1328" y="900"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="changdii.jpg" width="639" height="784"/>
+    </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="a2p-As-75b"/>
+        <segue reference="xin-qY-Qfm"/>
         <segue reference="D1U-WC-dM4"/>
+        <segue reference="a2p-As-75b"/>
     </inferredMetricsTieBreakers>
 </document>
